<resources>
    <string name="app_name">ToDoApp</string>
    <string name="to_do_list">To do list</string>
    <string name="addition">Addition</string>
    <string name="editing">Editing</string>
    <string name="add_item">add item</string>
    <string name="no_data">No Data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="change_view">Change view</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_low">Priority Low</string>
    <string name="priority_medium">Priority Medium</string>
    <string name="priority_high">Priority High</string>
    <string name="delete_all">Delete All</string>
    <string name="reset_sorting">Reset Sorting</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete %s</string>
    <string name="delete_everything">Delete everything</string>
    <string name="confirm_deletion_of_everything">Are you sure you want to remove everything?</string>
    <string name="confirm_deletion_item">Are you sure you want to remove %s ?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="restore">Restore</string>
    <string name="deleted">Deleted %s</string>
    <string name="fill_out_all_fields">Please fill out all fields</string>
    <string name="preferences">Settings</string>

    <string-array name="priorities">
        <item>Low Priority</item>
        <item>Medium Priority</item>
        <item>High Priority</item>
    </string-array>

    <string-array name="currentThemeOptions">
        <item>Light</item>
        <item>Dark</item>
        <item>System</item>
    </string-array>

    <string-array name="currentThemeValues">
        <item>DAY</item>
        <item>NIGHT</item>
        <item>SYSTEM</item>
    </string-array>

    <string-array name="currentThemeColorOptions">
        <item>Teal</item>
        <item>Indigo</item>
        <item>Orange</item>
    </string-array>

    <string-array name="currentThemeColorValues">
        <item>TEAL</item>
        <item>INDIGO</item>
        <item>ORANGE</item>
    </string-array>

    <string name="delete_item_with_confirm">Delete item without confirmation</string>
    <string name="choose_theme">Choose a theme</string>
    <string name="theme">Theme</string>
    <string name="theme_color">Theme color</string>
    <string name="choose_theme_color">Choose theme color</string>
</resources>