<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_change_view"
        android:icon="@drawable/ic_listview"
        android:title="@string/change_view"
        app:showAsAction="ifRoom" />

    <group>
        <item
            android:id="@+id/menu_sortBy"
            android:title="@string/sort_by">
            <menu>
                <item
                    android:id="@+id/menu_priority_low"
                    android:title="@string/priority_low" />
                <item
                    android:id="@+id/menu_priority_medium"
                    android:title="@string/priority_medium" />
                <item
                    android:id="@+id/menu_priority_high"
                    android:title="@string/priority_high" />
            </menu>
        </item>
    </group>

    <item
        android:id="@+id/menu_reset_sorting"
        android:title="@string/reset_sorting"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_delete_all"
        android:title="@string/delete_all"
        app:showAsAction="never" />

</menu>