<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="PREF_CONFIRM_DELETE_ITEM_KEY"
        android:defaultValue="false"
        android:title="@string/delete_item_with_confirm" />

    <ListPreference
        android:key="SET_CURRENT_THEME_KEY"
        android:defaultValue="SYSTEM"
        android:title="@string/theme"
        android:dialogTitle="@string/choose_theme"
        android:entries="@array/currentThemeOptions"
        android:entryValues="@array/currentThemeValues" />

    <ListPreference
        android:key="SET_CURRENT_THEME_COLOR_KEY"
        android:defaultValue="TEAL"
        android:title="@string/theme_color"
        android:dialogTitle="@string/choose_theme_color"
        android:entries="@array/currentThemeColorOptions"
        android:entryValues="@array/currentThemeColorValues"
        />
</PreferenceScreen>